syntax = "proto3";

package moose_networking;

service Networking {
    rpc SendValue(SendValueRequest) returns(SendValueResponse) {}
}

message SendValueRequest {
    bytes tagged_value = 1;
}

message SendValueResponse {}
